troubleshooting img height issue displaying on mobile devices but not on devtools mobile view

--- a/src/components/pages/projects/styles.scss
+++ b/src/components/pages/projects/styles.scss
@@ -92,6 +92,11 @@
     }
 }
 
+.project-item-img-thumb {
+    width: 100%;
+    height: auto;
+}
+
 .project-info {
     align-self: flex-start;
 
